# routes/api.php
@@ -3,31 +3,14 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider and all of them will
-| be assigned to the "api" middleware group. Make something great!
-|
-*/
+Route::post('/login', [App\Http\Controllers\AuthController::class, 'login']);
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/user', [App\Http\Controllers\ProfileController::class, '__invoke']);
+    Route::get('/health-check', [App\Http\Controllers\HealthController::class, '__invoke']);
+    Route::post('/logout', [App\Http\Controllers\AuthController::class, 'logout']);
+
+    Route::apiResource('posts', App\Http\Controllers\PostController::class);
+
+    Route::get('/collection', [App\Http\Controllers\CollectionController::class, '__invoke']);
 });
-
-/**
- * @unauthenticated
- */
-Route::get('/health-check', function () {
-    return [
-        'status' => 'up',
-        'services' => [
-            'database' => 'up',
-            'redis' => 'up',
-        ],
-    ];
-});
-
